--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@react-native-picker/picker": "2.4.8",
